[package]
name = "fc-rpc-core-debug"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
ethereum-types = "0.14"
futures = { version = "0.3", features = [ "compat" ] }
jsonrpsee = { version = "0.15.0", default-features = false, features = [ "macros", "server" ] }
fc-evm-tracing = { path = "../evm-tracing" }
fc-rpc-core-types = { path = "../rpc-core-types" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

sp-core = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }