[package]
name = "fc-rpc-trace"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.6.0"

[dependencies]
ethereum = { version = "0.14.0", features = [ "with-codec" ] }
ethereum-types = "0.14"
futures = { version = "0.3" }
jsonrpsee = { version = "0.15.0", default-features = false, features = [ "macros", "server" ] }
serde = { version = "1.0", features = [ "derive" ] }
sha3 = "0.10"
tokio = { version = "1.10", features = [ "sync", "time" ] }
tracing = "0.1.34"

fc-evm-tracing = { path = "../evm-tracing" }
fc-rpc-core-trace = { path = "../rpc-core-trace" }
fc-rpc-core-types = { path = "../rpc-core-types" }
fp-rpc-debug = { path = "../../primitives/rpc-debug" }

# Substrate
sc-client-api = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sc-network = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sc-utils = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-api = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-block-builder = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-blockchain = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-io = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-runtime = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-std = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-transaction-pool = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }

# Frontier
fc-consensus = { path = "../consensus" }
fc-rpc = { path = "../rpc", features = [ "rpc_binary_search_estimate" ] }
fc-rpc-core = { path = "../rpc-core" }
fp-rpc = { path = "../../primitives/rpc" }