[package]
name = "evm-tracer"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
fp-evm-tracing-events = { path = "../../primitives/rpc-evm-tracing-events", default-features = false, features = [ "evm-tracing" ] }
fp-ext = { path = "../../primitives/ext", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-core = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-io = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-runtime = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-std = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32", default-features = false }

# Frontier
ethereum-types = { version = "0.14", default-features = false }
evm = { version = "0.37.0", default-features = false, features = [ "with-codec" ] }
evm-gasometer = { version = "0.37.0", default-features = false }
evm-runtime = { version = "0.37.0", default-features = false }
fp-evm = { git = "https://github.com/dnjscksdn98/frontier", branch = "polkadot-v0.9.32", default-features = false }
pallet-evm = { git = "https://github.com/dnjscksdn98/frontier", branch = "polkadot-v0.9.32", default-features = false, features = [ "forbid-evm-reentrancy" ] }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"ethereum-types/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm/std",
	"evm/with-serde",
	"fp-evm-tracing-events/std",
	"fp-evm/std",
	"fp-ext/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]